@@ -44,8 +44,8 @@ function drush_election_statistics($election_id) {
   _election_statistics_drush_print($totals, $election->title);
   // Display statistics for individual posts if the --posts option is set.
   if (drush_get_option('posts', FALSE)) {
-    $post_totals = election_statistics_get_post_totals($election);
-    $posts = election_post_load_multiple(array_keys($post_totals));
+    $posts = election_post_load_by_election($election);
+    $post_totals = election_statistics_get_post_totals($election, $posts);
     foreach ($posts as $post_id => $post) {
       _election_statistics_drush_print((array) $post_totals[$post_id], $post->title);
     }
