@@ -159,14 +159,17 @@ function election_statistics_block_view($delta = '') {
  */
 function election_statistics_get_totals(stdClass $election, $reset = FALSE) {
   $cache_key = 'election_statistics:' . $election->election_id;
+  $ttl = variable_get('election_statistics_ttl', 300);
   // Return cached data if it already exists.
-  if (!$reset && ($cache = cache_get($cache_key)) && $cache->expire > REQUEST_TIME) {
+  if (!$reset && $ttl && ($cache = cache_get($cache_key)) && $cache->expire > REQUEST_TIME) {
     return $cache->data;
   }
   $query = _election_statistics_totals_query($election);
   $result = $query->execute()->fetchAssoc();
   // Cache the result (for 5 minutes by default).
-  cache_set($cache_key, $result, 'cache', REQUEST_TIME + variable_get('election_statistics_ttl', 300));
+  if ($ttl) {
+    cache_set($cache_key, $result, 'cache', REQUEST_TIME + $ttl);
+  }
   return $result;
 }
 
@@ -186,17 +189,20 @@ function election_statistics_get_totals(stdClass $election, $reset = FALSE) {
  */
 function election_statistics_get_post_totals(stdClass $election, $reset = FALSE) {
   $cache_key = 'election_statistics:' . $election->election_id . ':posts';
+  $ttl = variable_get('election_statistics_ttl', 300);
   // Return cached data if it already exists.
-  if (!$reset && ($cache = cache_get($cache_key)) && $cache->expire > REQUEST_TIME) {
+  if (!$reset && $ttl && ($cache = cache_get($cache_key)) && $cache->expire > REQUEST_TIME) {
     return $cache->data;
   }
   $query = _election_statistics_totals_query($election);
   // Group results by post.
-  $query->fields('ev', array('post_id'));
-  $query->groupBy('ev.post_id');
+  $query->fields('eb', array('post_id'));
+  $query->groupBy('eb.post_id');
   $result = $query->execute()->fetchAllAssoc('post_id', PDO::FETCH_ASSOC);
   // Cache the result (for 5 minutes by default).
-  cache_set($cache_key, $result, 'cache', REQUEST_TIME + variable_get('election_statistics_ttl', 300));
+  if ($ttl) {
+    cache_set($cache_key, $result, 'cache', REQUEST_TIME + $ttl);
+  }
   return $result;
 }
 
@@ -210,14 +216,13 @@ function election_statistics_get_post_totals(stdClass $election, $reset = FALSE)
  *   A Drupal select query, as returned by db_select().
  */
 function _election_statistics_totals_query(stdClass $election) {
-  $query = db_select('election_vote', 'ev')
-    ->condition('ev.election_id', $election->election_id)
-    ->condition('ev.valid', 1);
-  $query->join('election_ballot', 'eb', 'ev.ballot_id = eb.ballot_id');
+  $query = db_select('election_ballot', 'eb')
+    ->condition('eb.election_id', $election->election_id);
+  $query->condition('eb.value', 0, '>');
   // Get the total number of ballots, votes, and abstentions.
-  $query->addExpression('COUNT(DISTINCT ev.ballot_id)', 'ballots');
-  $query->addExpression('COUNT(DISTINCT IF(ev.abstain=0, ev.ballot_id, NULL))', 'votes');
-  $query->addExpression('COUNT(DISTINCT IF(ev.abstain=1, ev.ballot_id, NULL))', 'abstentions');
+  $query->addExpression('COUNT(DISTINCT eb.ballot_id)', 'ballots');
+  $query->addExpression('SUM(IF(eb.abstain=0, eb.value, NULL))', 'votes');
+  $query->addExpression('SUM(IF(eb.abstain=1, eb.value, NULL))', 'abstentions');
   $query->addExpression('COUNT(DISTINCT IF(eb.uid = 0, eb.sid_hash, eb.uid))', 'voters');
   $query->addTag('election_statistics_totals');
   return $query;
@@ -240,7 +245,7 @@ function _election_statistics_totals_query(stdClass $election) {
 function election_statistics_get_top_count(stdClass $election, $group_by, $limit = 10) {
   $query = db_select('election_ballot', 'eb')
     ->condition('election_id', $election->election_id)
-    ->condition('valid', 1)
+    ->condition('value', 0, '>')
     ->fields('eb', array($group_by));
   $query->addExpression('COUNT(DISTINCT IF(uid = 0, sid_hash, uid))', 'voters');
   $query->orderBy('COUNT(DISTINCT IF(uid = 0, sid_hash, uid))', 'DESC');
