@@ -357,6 +357,7 @@ function election_stv_preprocess_election_vote_confirm(&$variables) {
     $variables['ranking_changed'] = $ranking_changed;
 
     $header = array(t('Candidate'));
+    $rows = array();
     foreach ($candidate_rankings as $candidate_id => $rank) {
       if ($candidate_id == 'RON') {
         $candidate_item = t('RON (Re-Open Nominations)');
@@ -378,13 +379,6 @@ function election_stv_preprocess_election_vote_confirm(&$variables) {
 
     $header[] = t('Your vote') . ($ranking_changed ? '<sup>*</sup>' : '');
     foreach ($candidate_rankings as $candidate_id => $rank) {
-      if ($candidate_id == 'RON') {
-        $candidate_item = t('RON (Re-Open Nominations)');
-      }
-      else {
-        $candidate = $form_state['candidates'][$candidate_id];
-        $candidate_item = election_candidate_get_name($candidate);
-      }
       $rows[$candidate_id][] = $rank == 'NONE' ? t('-') : _election_stv_get_ordinal($rank);
     }
 
@@ -407,25 +401,23 @@ function election_stv_preprocess_election_vote_confirm(&$variables) {
 }
 
 /**
- * Implements hook_query_alter().
- */
-function election_stv_query_alter($query) {
-  if ($query->hasTag('election_statistics_totals')) {
-    $query->addExpression('COUNT(DISTINCT IF(ev.abstain=0, ev.vote_id, NULL))', 'rankings');
-  }
-}
-
-/**
  * Implements template_preprocess_election_statistics().
  */
 function election_stv_preprocess_election_statistics(&$variables) {
   $election = $variables['election'];
   if ($election->type == 'stv') {
     $totals = $variables['totals'];
+    $query = db_select('election_ballot', 'eb')
+      ->condition('eb.election_id', $election->election_id)
+      ->condition('eb.value', 0, '>')
+      ->condition('eb.abstain', 0);
+    $query->join('election_vote', 'ev', 'ev.ballot_id = eb.ballot_id');
+    $query->addExpression('COUNT(DISTINCT ev.vote_id)');
+    $totals['rankings'] = $query->execute()->fetchField();
     $variables['content']['election_table']['#header']['rankings'] = t('Rankings (STV)');
-    $variables['content']['election_table']['#rows'][0]['rankings'] = t('@rankings (@avg per vote)', array(
+    $variables['content']['election_table']['#rows'][0]['rankings'] = t('@rankings (@avg per ballot)', array(
       '@rankings' => number_format($totals['rankings']),
-      '@avg' => number_format($totals['votes'] ? ($totals['rankings'] / $totals['votes']) : 0, 1),
+      '@avg' => number_format($totals['ballots'] ? ($totals['rankings'] / $totals['ballots']) : 0, 1),
     ));
   }
 }
